[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/TurretSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Turret.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="Turret" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Sprite" parent="." instance=ExtResource( 1 )]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Turret_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Turret_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Turret_input_event"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
